--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#Sun Jan 17 15:24:47 EST 2021
+okta.oauth2.issuer=https\://dev-4163315.okta.com/oauth2/default
+okta.oauth2.client-secret=waSWlEWuL4E2OcvpSXyMvz1vMH5d7ufD6osPO4o5
 graphql.spqr.gui.enabled=true
+okta.oauth2.client-id=0oa3xtq8xDO3bFVvY5d6
