--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
 			<artifactId>graphql-spqr-spring-boot-starter</artifactId>
 			<version>0.0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.okta.spring</groupId>
+			<artifactId>okta-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
